--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -71,7 +71,7 @@ nav ul li a:hover {
     background-image: url("../images/circle-2696910_1920.jpg");
     background-size: cover;
     background-position: center;
-    background-attachment: fixed;
+    background-attachment: scroll;
     padding: 20px 35px;
     color: var(--primary);
     font-weight: bold;
@@ -90,14 +90,14 @@ nav ul li a:hover {
 }
 
 /* About Me */
-.about-me {
+.about-me, .my-work, footer {
     padding: 20px 0;
     display: flex;
     justify-content: space-evenly;
     font-weight: bold;
 }
 
-.about-me h2 {
+.about-me h2, .my-work h2, footer h2 {
     flex: 0 0 20%;
     text-align: right;
     padding-right: 40px;
@@ -128,9 +128,45 @@ nav ul li a:hover {
     padding-top: 10px;
 }
 
-.my-work {
-    display: flex;
+/* My Work section styles */
+.work-grid {  
+    display: grid;
+    column-gap: 10px;
+    row-gap: 10px;
+    grid-auto-flow: dense;
+    grid-template-columns: repeat(3, 1fr);
+    grid-auto-rows: minmax(150px, 1fr);
+  }
+
+.work-item {
+   display: flex;
+   border: 5px solid var(--secondary);
+   background-size: cover;
+   background-position: center;
 }
+
+.run-buddy {
+    background-image: url("../images/run-buddy.png");
+}
+
+.coming-soon {
+    background-image: url("../images/coming-soon.jpg");
+}
+
+.under-construction {
+    background-image: url("../images/under-construction.png");
+}
+
+
+
+/*{
+    padding: 15px 0;
+    border: 2px solid var(--secondary-color);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}*/
 
 footer {
     display: flex;
