added animation to nav bar links

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,7 +8,7 @@
 :root {
     --primary: rgba(211, 211, 211, 1);
     --secondary: rgba(34, 34, 34, 1);
-    --tertiary: rgba(49, 52, 61, 1);
+    --tertiary: rgb(68, 68, 68, 1);
     --dark: rgba(28, 29, 33, 1);
     --light: rgba(238, 238, 247, 1);
   }  
@@ -51,20 +51,28 @@ nav ul {
     list-style: none;
 }
 
-nav ul li a {
-    padding: 10px 15px;
-    font-weight: 900;
-    font-size: 1.75vw;
-}
-
-nav ul li a:visited {
+nav a:visited {
     color: var(--secondary);
 }
 
-nav ul li a:hover {
-    background: var(--secondary);
+nav a {
+    text-decoration: none;
+    padding: 5px 10px;
+    color: var(--secondary);
+    margin-right: 10px;
+    background-image: linear-gradient(var(--secondary) 0%, var(--secondary) 100%);
+    background-repeat: no-repeat;
+    background-size: 100% 4px;
+    background-position: bottom;
+    transition: 0.5s;
+    font-weight: 900;
+    font-size: 1.7vw;
+  }
+  
+  nav a:hover {
+    background-size: 100% 100%;
     color: var(--primary);
-}
+  }  
 
 /* Banner */
 .banner-hero {
@@ -90,14 +98,14 @@ nav ul li a:hover {
 }
 
 /* About Me */
-.about-me, .my-work, footer {
+.main-section {
     padding: 20px 0;
     display: flex;
     justify-content: space-evenly;
     font-weight: bold;
 }
 
-.about-me h2, .my-work h2, footer h2 {
+.content-header {
     flex: 0 0 20%;
     text-align: right;
     padding-right: 40px;
@@ -106,18 +114,18 @@ nav ul li a:hover {
     line-height: 1;
   }
 
-  .about-me ul {
+.about-me ul {
     list-style: none;
-    padding-top: 20px;
 }
 
-.skills {
-    padding-top: 20px;
+.education-work {
+    font-size: 1.5vw;
 }
 
 .skills h3 {
-    padding-bottom: 10px;
+    padding-bottom: 5px;
     border-bottom: 4px solid var(--secondary);
+    font-size: 1.5vw;
 }
 
 .skills ul {
@@ -125,7 +133,19 @@ nav ul li a:hover {
     flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
-    padding-top: 10px;
+}
+
+.skills ul li {
+    padding: 5px;
+    font-size: 1.5vw;
+}
+
+.section-content {
+    display: flex;
+    justify-content: space-between;
+    width: 70%;
+    padding-left: 20px;
+    margin: auto;
 }
 
 /* My Work section styles */
@@ -139,10 +159,21 @@ nav ul li a:hover {
   }
 
 .work-item {
-   display: flex;
-   border: 5px solid var(--secondary);
+   display: block;
+   border: 5px solid var(--tertiary);
    background-size: cover;
    background-position: center;
+}
+
+.work-item h3 {
+    display: inline-block;
+    background-color: var(--tertiary);
+    color: var(--primary);
+}
+
+.work-item span {
+    background-color: var(--tertiary);
+    color: var(--primary);
 }
 
 .run-buddy {
@@ -157,17 +188,7 @@ nav ul li a:hover {
     background-image: url("../images/under-construction.png");
 }
 
-
-
-/*{
-    padding: 15px 0;
-    border: 2px solid var(--secondary-color);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-}*/
-
-footer {
-    display: flex;
+/* Contact Me*/
+.contact-info {
+    font-size: 1.5vw;
 }
