edited grid and added links to My Work section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,8 +9,6 @@
     --primary: rgba(211, 211, 211, 1);
     --secondary: rgba(34, 34, 34, 1);
     --tertiary: rgb(68, 68, 68, 1);
-    --dark: rgba(28, 29, 33, 1);
-    --light: rgba(238, 238, 247, 1);
   }  
 
 body {
@@ -148,32 +146,46 @@ nav a {
     font-size: 1.5vw;
 }
 
-/* My Work section styles */
+/* My Work */
 .work-grid {  
     display: grid;
     column-gap: 10px;
     row-gap: 10px;
     grid-auto-flow: dense;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(8, 1fr);
     grid-auto-rows: minmax(150px, 1fr);
   }
 
 .work-item {
-   display: block;
+   display: flex;
+   align-items: flex-end;
+   grid-column: span 2;
    border: 5px solid var(--tertiary);
    background-size: cover;
    background-position: center;
+   text-decoration: none;
+   background-blend-mode: overlay;
+   transition: 0.5s;
+}
+
+.work-item:first-child {
+    grid-column: span 5;
+    grid-row: span 2;
+}
+
+.work-item:hover {
+    background-color: rgba(68, 68, 68, 0.5);
+}
+
+.work-item div {
+    background-color: var(--tertiary);
+    color: var(--primary);
+    padding: 5px 10px;
+    margin-bottom: 15px;
 }
 
 .work-item h3 {
-    display: inline-block;
-    background-color: var(--tertiary);
-    color: var(--primary);
-}
-
-.work-item span {
-    background-color: var(--tertiary);
-    color: var(--primary);
+    font-size: 1.5vw;
 }
 
 .run-buddy {
@@ -188,7 +200,7 @@ nav a {
     background-image: url("../images/under-construction.png");
 }
 
-/* Contact Me*/
+/* Contact Me */
 .contact-info {
     font-size: 1.5vw;
 }
