added media query

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,7 +17,7 @@ body {
     line-height: 1.5;
     font-family: 'Quicksand', sans-serif;
 }
-
+/* Header Section */
 header {
     display: flex;
     justify-content: space-between;
@@ -30,13 +30,14 @@ header h1 {
     color: var(--primary);
     font-size: 3.5vw;
     padding: 5px 1% 5px 5%;
+    margin: auto;
 }
 
 header a {
     text-decoration: none;
 }
 
-/* Nav Bar */
+/* Navigation Bar */
 nav {
     margin: 20px 0;
 }
@@ -109,7 +110,7 @@ nav a {
     padding-right: 40px;
     border-right: 4px solid var(--secondary);
     font-size: 4vw;
-    line-height: 1;
+    line-height: 1.2;
   }
 
 .section-content {
@@ -132,6 +133,7 @@ nav a {
     padding-bottom: 5px;
     border-bottom: 4px solid var(--secondary);
     font-size: 1.5vw;
+    text-align: center;
 }
 
 .skills ul {
@@ -201,10 +203,6 @@ nav a {
 }
 
 /* Contact Me */
-.contact-info {
-    font-size: 1.5vw;
-}
-
 .contact-info a:visited {
     color: var(--secondary);
 }
@@ -223,7 +221,52 @@ nav a {
     font-size: 1.7vw;
   }
   
-  .contact-info a:hover {
+.contact-info a:hover {
     background-size: 100% 100%;
     color: var(--primary);
   }  
+
+/* Media queries */
+
+@media screen and (max-width: 768px) {
+    nav a, .banner-content {
+        font-size: 3vw;
+        margin-right: 0;
+        margin-left: 10px;
+    }
+
+    .content-header {
+        padding-right: 20px;
+    }
+
+    .about-me-div {
+        display: inline-block;
+        justify-content: center;
+    }
+
+    .education-work, .skills h3, .skills ul li, .work-item h3, .work-item span, .contact-info a {
+        font-size: 3vw;
+    }
+
+    .skills {
+        padding-top: 20px;
+        width: 200px;
+    }
+
+    .skills h3 {
+        border-bottom: 2px solid var(--secondary);
+    }
+
+    .work-item, .work-item:first-child {
+        grid-column: 1 / -1;
+        grid-row: span 1;
+    }
+
+    .work-grid {
+        grid-auto-rows: minmax(200px, 1fr);
+    }
+
+    .contact-info {
+        display: block;
+    }
+}
