--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -189,6 +189,10 @@ nav a {
     font-size: 1.5vw;
 }
 
+.spontaneous-adventurer {
+    background-image: url("../images/spontaneous-adventurer.png");
+}
+
 .run-buddy {
     background-image: url("../images/run-buddy.png");
 }
@@ -230,7 +234,7 @@ nav a {
 @media screen and (max-width: 768px) {
     header h1 {
         margin: auto
-    }
+    } 
 
     nav a, .banner-content {
         font-size: 3vw;
@@ -268,7 +272,7 @@ nav a {
         grid-auto-rows: minmax(200px, 1fr);
     }
 
-    .contact-info {
+    .contact-info, nav ul {
         flex-direction: column;
         align-items: flex-start;
     }
